[package]
name = "rocket_jwt"
version = "0.1.0"
authors = ["Kjell W. Kongsvik <kjell.kongsvik@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "async" }
jsonwebtoken = "7.0.0-alpha.2"
serde = {version = "1.0", features = ["derive"] }
